3.14.0
======
Jun 10, 2022
- Introduce new setting to bind row data in outline examples tables to same 
  named attributes in the current scope:
  - `gwen.auto.bind.tableData.outline.examples = true|false`
    - `true` (default) to make each cell in each row accessible as `${name}` in the current scope and `<name>` in the template
    - `false` to make each cell in each row accessible as `<name>` in the template only

3.13.6
======
Jun 5, 2022
- Add horizontal scrolling to tables in HTML reports

3.13.5
======
Jun 2, 2022
- Support DocString in javascript function application DSL

3.13.4
======
Jun 2, 2022
- Support masked data in system process DSLs

3.13.3
======
Jun 2, 2022
- Update tikaCore from v1.28.2 to v1.28.3

3.13.2
======
Jun 1, 2022
- Add overloaded DSLs:
  - `I execute unix system process "<process>"`
  - `I execute unix system process "<process>" delimited by "<delimiter>"`

3.13.1
======
Jun 1, 2022
- Do not allow quotes in if condition reference names

3.13.0
======
May 31, 2022
- Remove concatenation syntax in favor of interpolation/substitution
- Add line break between each status group in console report summary

3.12.3
======
May 30, 2022
- Update console summary report indenting

3.12.2
======
May 30, 2022
- Update console summary report to include feature name

3.12.1
======
May 25, 2022
- Update libs
  - Update scala from v3.1.1 to v3.1.2
  - Update tika-core from v1.26 to v1.28.2
  - Update jackson-databind from v2.13.2.2 to v2.13.3
  - Update gherkin from v22.0.0 to v23.0.1
  - Update scala-logging from v3.9.4 to v3.9.5

3.12.0
======
May 25, 2022
- Add where clause (filter) to `@Examples` tag
- Add note for turning off declarative feature mode and strict behavior rules in respective error messages
- Interpolate input data into feature and scenario level tags, names and descriptions
- No wrap on table data rows in HTML

3.11.10
=======
May 23, 2022
- Fix Lazy/Eager validation

3.11.9
======
May 12, 2022