@@ -77,6 +77,7 @@ gwen {
   console {
     log {
       colors = true
+      depth = 1
       stepDefs = true
     }
   }
