@@ -53,6 +53,7 @@ class GwenSettingsTest extends BaseTest with Matchers {
       GwenSettings.`gwen.report.slideshow.framespersecond` should be (4)
       GwenSettings.`gwen.state.level` should be (StateLevel.feature)
       GwenSettings.`gwen.console.log.colors` should be (true)
+      GwenSettings.`gwen.console.log.depth` should be (1)
       GwenSettings.`gwen.console.log.stepDefs` should be (true)
       GwenSettings.`gwen.video.dir`.getPath should be ("output/.video")
       GwenSettings.`gwen.video.timeoutSecs` should be (10)
