@@ -1,11 +1,13 @@
 3.14.0
 ======
-Jun 10, 2022
+Jun 12, 2022
 - Introduce new setting to bind row data in outline examples tables to same 
   named attributes in the current scope:
   - `gwen.auto.bind.tableData.outline.examples = true|false`
     - `true` (default) to make each cell in each row accessible as `${name}` in the current scope and `<name>` in the template
     - `false` to make each cell in each row accessible as `<name>` in the template only
+- Introduce new setting to set console logging depth
+  - `gwen.console.log.depth=number` (default is 1)
 
 3.13.6
 ======
